# sshakyll

./: .gitignore  README.md  Setup.hs  build.sh  changelog.md  description.md  pgp-keyring  pgp-signature  sandstorm-pkgdef.capnp  sshakyll.cabal  stack.yaml  startup.sh
app/: Main.hs  site.hs
fay/: File.hs  FilePath.hs  HTTP.hs  editor.hs
public/: editor.css  foreign.js  index.html  utils.js
source/: config.json
src/: SSHakyll.hs  Site.hs
test/: Spec.hs
