name:                sshakyll
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/Lupino/sshakyll#readme
license:             BSD3
license-file:        LICENSE
author:              Li Meng Jun
maintainer:          lmjubuntu@gmail.com
copyright:           MIT
category:            value
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SSHakyll
                     , Site
  build-depends:       base >= 4.7 && < 5
                     , directory == 1.2.2.0
                     , filepath == 1.4.0.0
                     , aeson == 0.11.2.1
                     , text == 1.2.2.1
                     , unordered-containers == 0.2.7.1
                     , bytestring == 0.10.6.0
                     , hakyll == 4.8.*
  default-language:    Haskell2010

executable sshakyll
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sshakyll
                     , scotty
                     , http-types
                     , data-default-class
                     , streaming-commons
                     , wai
                     , wai-extra
                     , network
                     , warp
                     , transformers
                     , filepath
                     , text
                     , aeson
                     , wai-middleware-static
  default-language:    Haskell2010

test-suite sshakyll-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sshakyll
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Lupino/sshakyll
