name:                sshakyll
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/Lupino/sshakyll#readme
license:             BSD3
license-file:        LICENSE
author:              Li Meng Jun
maintainer:          lmjubuntu@gmail.com
copyright:           MIT
category:            value
build-type:          Custom
extra-source-files:  fay/*.hs
cabal-version:       >=1.10
data-files:          fay/*.hs

x-fay-packages:      fay-dom
x-fay-root-modules:  editor
x-fay-include-paths: fay
x-fay-output-dir:    public
x-fay-source-dir:    fay

library
  hs-source-dirs:      src
  exposed-modules:     SSHakyll
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , filepath
                     , aeson
                     , text
                     , unordered-containers
                     , bytestring
                     , process

                     -- required by fay compiler
                     , fay
                     , fay-builder
                     , fay-dom
  default-language:    Haskell2010

executable sshakyll
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sshakyll
                     , scotty
                     , data-default-class
                     , streaming-commons
                     , wai
                     , wai-extra
                     , network
                     , warp
                     , transformers
                     , filepath
                     , text
                     , aeson
                     , wai-middleware-static
                     , mime-types
                     , bytestring
                     , optparse-applicative
                     , zip-archive
                     , directory
  default-language:    Haskell2010

executable site
  hs-source-dirs:      app
  main-is:             site.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hakyll
                     , vector
                     , bytestring
                     , directory
                     , filepath
                     , text
                     , aeson
  default-language:    Haskell2010

test-suite sshakyll-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sshakyll
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Lupino/sshakyll
